# netatmo-connect

./: Cargo.toml  example.json
src/: lib.rs  main.rs
src/netatmo/: authorization.rs  data.rs  errors.rs  funs.rs  mod.rs
