[package]
name = "netatmo-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
confy = "0.5"
url = "2.4"
webbrowser = "0.8"
actix-web = "4.3"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
